k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry-api
  labels:
    app: telemetry-api
spec:
  # We are declaring we want 2 identical instances of our API running
  replicas: 2
  selector:
    matchLabels:
      app: telemetry-api
  template:
    metadata:
      labels:
        app: telemetry-api
    spec:
      containers:
      - name: api
        # UPDATE THIS LINE to use the newly compiled v1.1 image
        image: telemetry-api:v1.1
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
