k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry-api
  labels:
    app: telemetry-api
spec:
  # We are declaring we want 2 identical instances of our API running
  replicas: 2
  selector:
    matchLabels:
      app: telemetry-api
  template:
    metadata:
      labels:
        app: telemetry-api
    spec:
      containers:
      - name: api
        image: telemetry-api:local
        # Forces K8s to use the local image we sideloaded instead of checking DockerHub
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
