k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry-worker
  labels:
    app: telemetry-worker
spec:
  # We deploy 2 workers. Kafka will automatically assign different partitions to each, 
  # load-balancing the message consumption perfectly!
  replicas: 2
  selector:
    matchLabels:
      app: telemetry-worker
  template:
    metadata:
      labels:
        app: telemetry-worker
    spec:
      containers:
      - name: worker
        image: telemetry-worker:local
        imagePullPolicy: Never
