k8s/metabase.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: metabase
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  labels:
    app: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      # ==========================================
      # INIT CONTAINER (Downloads the ClickHouse Plugin)
      # ==========================================
      containers:
      - name: metabase
        image: metabase/metabase:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: metabase-plugins
          mountPath: /plugins/
      volumes:
      - name: metabase-plugins
        # emptyDir creates a temporary, shared folder that exists only as long as the Pod is alive.
        # It allows the initContainer to pass the downloaded file to the main container.
        emptyDir: {}
